--- a/aula_html/index.html
+++ b/aula_html/index.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <h1>Formulário de cadastro</h1>
-    <form>
+    <form id="forms">
         <label>Nome</label>
-        <input type="text" placeholder="Nome completo" /> <br/> <br/>
+        <input type="text" placeholder="Nome completo" id="nome" /> <br/> <br/>
         <label>E-mail</label>
-        <input type="email" placeholder="Digite seu e-mail" /> <br/> <br/>
+        <input type="email" placeholder="Digite seu e-mail" id="email" /> <br/> <br/>
         <label>Senha</label>
-        <input type="password" placeholder="Digite sua senha" /> <br/> <br/>
+        <input type="password" placeholder="Digite sua senha" id="senha"/> <br/> <br/>
+        <input type="submit" value="Cadastrar" id="button"/>
     </form>
-    <button>Cadastrar</button>
+    
 
 </body>
 </html>
